--- a/CustomGuildChallenges/Manifest.json
+++ b/CustomGuildChallenges/Manifest.json
@@ -1,10 +1,10 @@
 ﻿{
   "Name": "Custom Adventure Guild Challenges",
   "Author": "DefenTheNation",
-  "Version": "1.0.0",
-  "Description": "Customize the guild challenges and rewards!",
+  "Version": "1.0",
+  "Description": "Customize the adventure guild challenges and rewards!",
   "UniqueID": "DefenTheNation.CustomGuildChallenges",
-  "EntryDll": "TestMod.dll",
-  "MinimumApiVersion": "2.0",
+  "EntryDll": "CustomGuildChallenges.dll",
+  "MinimumApiVersion": "2.6",
   "UpdateKeys": []
 }
