--- a/CustomGuildChallenges/Manifest.json
+++ b/CustomGuildChallenges/Manifest.json
@@ -5,6 +5,6 @@
   "Description": "Customize the adventure guild challenges and rewards!",
   "UniqueID": "DefenTheNation.CustomGuildChallenges",
   "EntryDll": "CustomGuildChallenges.dll",
-  "MinimumApiVersion": "2.5",
+  "MinimumApiVersion": "2.6-beta",
   "UpdateKeys": [ "Nexus:2301" ]
 }
