Fix "FrostBat" to "Frost Bat", add "Squid Kid", add custom config.json to mod itself

--- a/CustomGuildChallenges/CustomGuildChallenges.csproj
+++ b/CustomGuildChallenges/CustomGuildChallenges.csproj
@@ -74,6 +74,9 @@
     <Compile Include="SlayerChallenge.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="config.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <None Include="Manifest.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
