--- a/CustomGuildChallenges/config.json
+++ b/CustomGuildChallenges/config.json
@@ -3,6 +3,7 @@
   "CountKillsOnFarm": true,
   "GilNoRewardDialogue": "I ain't got nothin' for ya. Now get out there and get to swingin' that sword.",
   "GilSleepingDialogue": "I'm tryin to sleep, ya rascal! *grumble grumble*",
+  "GilSpecialGiftDialogue": "Thanks for cleanin' up all those monsters. Figured you deserved somethin' extra special.",
   "Challenges": [
     {
       "ChallengeName": "Slimes",
@@ -168,7 +169,7 @@
     },
     {
       "ChallengeName": "Desert Monsters",
-      "RequiredKillCount": 1200,
+      "RequiredKillCount": 1000,
       "RewardType": 0,
       "RewardItemNumber": 434,
       "MonsterNames": [
