Add logic to not show notification on vanilla challenges as the base game already does this

--- a/CustomGuildChallenges/config.json
+++ b/CustomGuildChallenges/config.json
@@ -27,8 +27,7 @@
       "MonsterNames": [
         "Bat",
         "Frost Bat",
-        "Lava Bat",
-        "Iridium Bat"
+        "Lava Bat"
       ]
     },
     {
@@ -52,7 +51,9 @@
       "MonsterNames": [
         "Bug",
         "Grub",
-        "Fly"
+        "Fly",
+        "Mutant Grub",
+        "Mutant Fly"
       ]
     },
     {
