--- a/CustomGuildChallenges/Manifest.json
+++ b/CustomGuildChallenges/Manifest.json
@@ -1,10 +1,10 @@
 ﻿{
   "Name": "Custom Adventure Guild Challenges",
   "Author": "DefenTheNation",
-  "Version": "1.5",
+  "Version": "1.6",
   "Description": "Customize the adventure guild challenges and rewards!",
   "UniqueID": "DefenTheNation.CustomGuildChallenges",
   "EntryDll": "CustomGuildChallenges.dll",
-  "MinimumApiVersion": "2.6-beta",
+  "MinimumApiVersion": "2.7",
   "UpdateKeys": [ "Nexus:2301" ]
 }
