Fix longstanding issue with clients not getting kills on farm or mutant bug lair, update to SMAPI 3.0

--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,7 @@
 # This .gitignore file was automatically created by Microsoft(R) Visual Studio.
 ################################################################################
 
-/packages/Pathoschild.Stardew.ModBuildConfig.2.1.0-beta-20180428
+/packages/Pathoschild.Stardew.ModBuildConfig.2.2.0
 /CustomGuildChallenges/bin
 /CustomGuildChallenges/obj
 /.vs/CustomGuildChallenges
