Update to latest SMAPI version, update item codes using item code generator (separate project/tool)

--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,7 @@
 /.vs/CustomGuildChallenges
 /.vs/config
 /CustomGuildChallenges/CustomGuildChallenges.csproj.user
+/.vs/slnx.sqlite
+/.vs/CustomSlayerChallenges/v16/.suo
+/.vs/ProjectSettings.json
+/.vs
