--- a/CustomGuildChallenges/manifest.json
+++ b/CustomGuildChallenges/manifest.json
@@ -1,10 +1,10 @@
 ﻿{
   "Name": "Custom Adventure Guild Challenges",
   "Author": "DefenTheNation",
-  "Version": "1.9.1-beta.1-minervamaga",
+  "Version": "2.0",
   "Description": "Customize the adventure guild challenges and rewards!",
   "UniqueID": "DefenTheNation.CustomGuildChallenges",
   "EntryDll": "CustomGuildChallenges.dll",
-  "MinimumApiVersion": "2.11",
+  "MinimumApiVersion": "3.1.0",
   "UpdateKeys": [ "Nexus:2301" ]
 }
